# lighter-trading-bot

./: .cursorrules  .env.example  .gitignore  .gitmodules  AGENT.md  CLAUDE.md  DEPLOYMENT.md  README.md  check_code.sh  check_connection.py  config.yaml  dry_run.sh  main.py  mypy.ini  noop_config.yaml  pyproject.toml  requirements.txt  run_mypy.sh  setup.sh  simulation_config.template.json  spot_LIT.yaml  start.sh  update_sdk.sh  wallet_config.template.json
.gemini/: architecture.md  memory.md
configs/: live_spot_LIT.yaml  perp_grid.template.yaml  spot_LIT.yaml  spot_grid.template.yaml
deployment/: start.sh  stop.sh
docs/: deployment.md  logging.md
src/: config.py  constants.py  logging_utils.py  model.py
src/broadcast/: server.py  types.py
src/engine/: base.py  context.py  core.py  engine.py  precision.py  simulation.py
src/strategy/: base.py  common.py  noop.py  perp_grid.py  spot_grid.py  types.py
src/ui/: app.py  console.py  tui.css
src/ui/screens/: config.py  simulation.py
tests/: analyze_orders_api.py  test_acquisition_price_clamping.py  test_app.py  test_config.py  test_config_spread.py  test_decimal_precision.py  test_engine_resilience.py  test_logging_utils.py  test_markets.py  test_noop.py  test_perp_grid.py  test_schema_validation.py  test_spot_grid.py  test_spread.py  test_strategy_common.py
