[project]
name = "lighter-trading-bot"
version = "0.1.0"
description = "High-performance trading bot for Lighter exchange"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "lighter-sdk @ git+https://github.com/smohantty/lighter-python.git",
    "websockets>=15.0.1",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.0.0",
    "types-pyyaml",
    "ruff>=0.1.0",
    "jsonschema>=4.0.0",
]


[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Enable specific rule sets (E=Error, F=Pyflakes, I=isort, B=Bugbear)
select = ["E", "F", "I", "B"]
ignore = ["E501"] # Ignore line-length violations
